idk what im doing

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MyBookstoreDb;Trusted_Connection=True;Encrypt=False"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+  "Key": "AnyKeyWorksFineButBetterUseStrongerKeys",
+  "Issuer": "http://localhost:5130",
+  "Audience": "http://localhost:5130",
+  "DurationInMinutes": 60
+}
 }
