--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MyBookstoreDb;Trusted_Connection=True;Encrypt=False"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MyBookstoreDb;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*",
   "Jwt": {
